@@ -5,6 +5,7 @@
 = GENI Portal Release Notes =
 
 == 2.9 ==
+ * Undo changes that caused a logout on insufficient attributes (#939)
 
 == 2.8 ==
    * Ensure max date in slice renew datepicker is by project
